# cloudgps

./: .cproject  .project  0001-Add-missing-buildings3d.h.patch  Makefile  Makefile.harmattan  Makefile.in  cloudgps.project  cloudgps.tags  cloudgps.workspace  cloudgps.workspace.session  configure  configure.in
.forgejo/workflows/: build.yml
debian/: changelog  control  copyright  rules
res/: cloudgps.desktop  cloudgps.ini  providers.ini
src/: accelerometer.c  accelerometer.h  battery.c  buildings3d.c  buildings3d.h  config.c  config.h  config.h.in  console.c  console.h  downloadQueue.c  downloadQueue.h  file.c  file.h  geocoder.c  geometry.c  geometry.h  glcanvas.c  glunproject.c  glunproject.h  input.c  lesson06.c  location.c  main.c  main.h  markerIterator.c  markerIterator.h  network.c  network.h  screen.c  screen.h  taskman.c  textRender.c  textRender.h  texture.c  texture.h  tile.c  tile.h  tileProviders.c  tileengine.c  (+5 more)
src/geocoding/: cloudmade_geocoder.c  cloudmade_geocoder.h  coordinate_reader.c  coordinate_reader.h  geocoder.c  geocoder.h  google_geocoder.c  google_geocoder.h  google_local_geocoder.c  google_local_geocoder.h  google_maps_geocoder.c  google_maps_geocoder.h
src/navigation/: navigation.c  navigation.h
src/routing/: cloudmade_router.c  cloudmade_router.h  google_maps_router.c  google_maps_router.h  router.c  router.h
